Upgrade java to openjdk 17